--- a/package.json
+++ b/package.json
@@ -38,6 +38,12 @@
     "protractor": "4.0.3",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "^2.0.0"
+    "typescript": "^2.0.0",
+    "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "angular-mocks": "^1.5.0",
+    "base64-js": "^1.2.0",
+    "bower": "^1.3.12",
+    "browserstacktunnel-wrapper": "^1.4.2"
   }
 }
